2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	Update normative references.

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	New naming for origin arguments.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Fixed typos in defitnions.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	'rotate' and 'rotateBy' should be pure 2D operations.
	More detailed example for passing DOM string and stringifier.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Fixed typos in defitnions.