@@ -3313,7 +3313,7 @@ class="prop-name">'image-rendering'</span> property setting.</p>
 </div>
 
 <div class="example">
-<p>The followinf example illustrates how images are placed relative
+<p>The following example illustrates how images are placed relative
 to an object. From left to right:</p>
 <ul>
  <li>
@@ -5758,12 +5758,9 @@ referenced by E is defined as follows:</p>
 </ul>
 
 <p>
-  For content that falls under this restriction, it should not be rendered into
-  the input image. For example, a filter effect that is applying to a cross-origin
-  'iframe' element would receive a completely blank input image.
+  For content that falls under this restriction, the filter has no affect. For example, a filter effect that is applying to a cross-origin
+  'iframe' element does not have any affect on this element.
 </p>
-
-<div class="issue" id="issue-cors">It might be better to specify that if a CORS violation is attempted, then the filter is disabled (instead of running the filter with an empty canvas).</div>
 
 <h2 id="DOMInterfaces">DOM interfaces</h2>
 
