@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-03-08 name=dcterms.issued>
+  <meta content=2013-03-09 name=dcterms.issued>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -35,14 +35,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 8 March 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 9 March 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130308/-->
+     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130309/-->
 
     <dt>Latest version:
 
@@ -8081,7 +8081,7 @@ A' = <a
       </div>
 
       <div class=example>
-       <p>The followinf example illustrates how images are placed relative to
+       <p>The following example illustrates how images are placed relative to
         an object. From left to right:
 
        <ul>
@@ -12670,14 +12670,10 @@ void main()
         href="http://www.w3.org/TR/SVG/struct.html#UseElement">&lt;use&gt;</a></span>
       </ul>
 
-      <p> For content that falls under this restriction, it should not be
-       rendered into the input image. For example, a filter effect that is
-       applying to a cross-origin ‘<code class=property>iframe</code>’
-       element would receive a completely blank input image.
-
-      <div class=issue id=issue-cors>It might be better to specify that if a
-       CORS violation is attempted, then the filter is disabled (instead of
-       running the filter with an empty canvas).</div>
+      <p> For content that falls under this restriction, the filter has no
+       affect. For example, a filter effect that is applying to a
+       cross-origin ‘<code class=property>iframe</code>’ element does not
+       have any affect on this element.
 
       <h2 id=DOMInterfaces><span class=secno>18. </span>DOM interfaces</h2>
 
