@@ -114,7 +114,7 @@
         </dd>
         <dt>sequence&lt;double> quaternions</dt>
         <dd>
-          Is an sequence of four double items representing the two quaternions for the rotation of the matrix.
+          Is an sequence of four double items representing the quaternions for the rotation of the matrix.
         </dd>
       </dl>
 
@@ -182,7 +182,16 @@ matrix.rotateBy(45);
             <dl class='parameters'>
               <dt>Float32array array</dt>
               <dd>
-                Create an identity matrix first. An array of 6 items sets the element values <code>a</code> to <code>f</code>. An array of 16 items sets the element values <code>m11</code> to <code>m44</code>.
+                Create an identity matrix first. An Float32array [[!TYPED-ARRAYS]] of 6 items sets the element values <code>a</code> to <code>f</code>. An array of 16 items sets the element values <code>m11</code> to <code>m44</code>.
+              </dd>
+            </dl>
+          </dd>
+          <dt>Constructor()</dt>
+          <dd>
+            <dl class='parameters'>
+              <dt>Float64array array</dt>
+              <dd>
+                Create an identity matrix first. An Float64array [[!TYPED-ARRAYS]] of 6 items sets the element values <code>a</code> to <code>f</code>. An array of 16 items sets the element values <code>m11</code> to <code>m44</code>.
               </dd>
             </dl>
           </dd>
@@ -671,7 +680,11 @@ matrix.rotateBy(45);
             </dd>
             <dt>Float32Array toFloat32Array()</dt>
             <dd>
-              Returns the serialized elements of the current matrix in column-major order as Float32Array.
+              Returns the serialized elements of the current matrix in column-major order as Float32Array [[!TYPED-ARRAYS]].
+            </dd>
+            <dt>Float64Array toFloat64Array()</dt>
+            <dd>
+              Returns the serialized elements of the current matrix in column-major order as Float64Array [[!TYPED-ARRAYS]].
             </dd>
             <dt>DecomposedMatrix decompose()</dt>
             <dd>
