@@ -1,3 +1,6 @@
+2013-03-09  Dirk Schulze  <dschulze@adobe.com>
+	Added Float64Array type and reference to Typed-Array spec.
+
 2013-03-08  Dirk Schulze  <dschulze@adobe.com>
 	Update normative references.
 
